# tiny-nn

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_matmul.cpp  bench_mlp.cpp
benchmarks/utils/: timer.h
examples/: classify_blobs.cpp  linear_regression.cpp  save_load_demo.cpp  train_resume_blobs.cpp  xor_train.cpp
include/core/: error.h  math.h  rng.h  tensor.h
include/data/: dataloader.h  dataset.h  toy_datasets.h
include/io/: checkpoint.h
include/nn/: activations.h  dense.h  losses.h  module.h  sequential.h
include/optim/: adam.h  sgd.h
src/core/: math.cpp  rng.cpp  tensor.cpp
src/data/: dataloader.cpp  toy_datasets.cpp
src/io/: checkpoint.cpp
src/nn/: activations.cpp  dense.cpp  losses.cpp  sequential.cpp
src/optim/: adam.cpp  sgd.cpp
tests/: run_tests.cpp  test_accum.cpp  test_checkpoint.cpp  test_core.cpp  test_data.cpp  test_grad.cpp  test_losses.cpp  test_memory.cpp  test_optim.cpp
tests/utils/: test_utils.h
